---
source: crates/pixi_manifest/src/manifests/manifest.rs
expression: manifest.document.to_string()
---
[project]
name = "foo"
channels = ["conda-forge", "https://custom.com/channel"]
platforms = ["linux-64", "win-64"]

[dependencies]

[feature.test]
channels = ["test", "test2"]

[feature.test.dependencies]

[feature.cuda]
channels = ["nvidia"]
